# packages/backend/openapi.yaml
@@ -2978,6 +2978,9 @@ components:
           $ref: '#/components/schemas/RoleTypeEnum'
         id:
           type: string
+        createdAt:
+          format: date-time
+          type: string
         email:
           type: string
         organizationId:
@@ -2991,6 +2994,7 @@ components:
       required:
         - roleType
         - id
+        - createdAt
         - email
         - organizationId
         - portfolioId
