# packages/backend/src/roles/dto/role.dto.ts
@@ -7,8 +7,7 @@ import { Exactly } from 'src/types/exactly.type';
 
 export class RoleDto implements Exactly<RoleSchema, RoleDto> {
 	id: string;
-	// FIX: add date
-	// createdAt: Date;
+	createdAt: Date;
 	email: string;
 	@ApiProperty({ enum: RoleType, enumName: 'RoleTypeEnum' })
 	roleType: RoleType;
