# packages/utils/src/schemas/role.schema.ts
@@ -10,6 +10,7 @@ export const roleSchema = z
 	.object({
 		id: z.string().uuid(),
 		email: z.string().email(),
+		createdAt: z.date(),
 		// TODO: constrain this to the RoleType enum
 		roleType: z.enum(['ORGADMIN', 'PORTFOLIO', 'TENANT']),
 		organizationId: z.string().uuid(),
